// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. Render an inline element 1`] = `
<div>
  <div>
    Lindsay McIntosh Scottish Political Editor
  </div>
</div>
`;

exports[`2. Render an author first 1`] = `
<div>
  <a
    href="/profile/camilla-long"
    role="link"
  >
    Camilla Long
  </a>
  <div>
    , Environment Editor
  </div>
</div>
`;

exports[`3. Render an author last 1`] = `
<div>
  <div>
    RBS Six Nations 
  </div>
  <a
    href="/profile/mike-atherton"
    role="link"
  >
    Mike Atherton
  </a>
</div>
`;

exports[`4. Render multiple authors separated by commas 1`] = `
<div>
  <a
    href="/profile/camilla-long"
    role="link"
  >
    Camilla Long
  </a>
  <div>
    , 
  </div>
  <a
    href="/profile/mike-atherton"
    role="link"
  >
    Mike Atherton
  </a>
  <div>
    , 
  </div>
  <a
    href="/profile/alexandra-frean"
    role="link"
  >
    Alexandra Frean
  </a>
</div>
`;

exports[`5. Render multiple authors separated by spaces 1`] = `
<div>
  <a
    href="/profile/camilla-long"
    role="link"
  >
    Camilla Long
  </a>
  <div>
     
  </div>
  <a
    href="/profile/mike-atherton"
    role="link"
  >
    Mike Atherton
  </a>
  <div>
     
  </div>
  <a
    href="/profile/alexandra-frean"
    role="link"
  >
    Alexandra Frean
  </a>
</div>
`;

exports[`6. Render null when AST is empty 1`] = `null`;
